# blusc

./: .gitmodules  AGENTS.md  BLOSC_NOTES.md  Cargo.toml  LICENSE  PLAN.md  README  README.md
.github/workflows/: ci.yml  release.yml
src/: api.rs  convenience.rs  lib.rs
src/blosc/: b2nd.c  b2nd.rs  b2nd_utils.c  b2nd_utils.rs  bitshuffle_generic.c  bitshuffle_generic.rs  blosc2.c  blosc2.rs  blosc2_stdio.c  blosc2_stdio.rs  blosc_private.c  blosc_private.rs  blosclz.c  blosclz.rs  context.c  context.rs  delta.c  delta.rs  fastcopy.c  fastcopy.rs  frame.c  frame.rs  mod.rs  schunk.c  schunk.rs  schunk_private.rs  sframe.c  sframe.rs  shuffle.c  shuffle.rs  shuffle_generic.c  shuffle_generic.rs  stune.c  stune.rs  timestamp.c  timestamp.rs  trunc_prec.c  trunc_prec.rs
src/codecs/: blosclz.rs  mod.rs
src/filters/: mod.rs  tests.rs
src/include/: b2nd_include.c  b2nd_include.rs  blosc2_include.rs  codecs_registry.rs  filters_registry.rs  mod.rs  tuners_registry.rs
src/internal/: constants.rs  mod.rs
tests/: compare_bitshuffle.rs  compare_c_rust_compression.rs  compare_compression.rs  compare_with_bindings.rs  compare_with_blosc1_bindings.rs  compare_with_zarrs.rs  debug_bitshuffle.rs  debug_blosclz.rs  debug_bstarts.rs  debug_c_decompress.rs  debug_c_roundtrip.rs  debug_clevel0.rs  debug_compare_bytes.rs  debug_first_match.rs  debug_simple.rs  debug_simple_compress.rs  inspect_c_format.rs  roundtrip.rs  simple_c_test.rs  test.rs  test_bitshuffle_large.rs  test_bitshuffle_leftovers.rs  test_bitshuffle_pattern.rs  test_blosc1_roundtrip.rs  test_blosclz_on_bitshuffle.rs  test_blosclz_ratio.rs  test_cases_7_onward.rs  test_compress_roundtrip.rs  test_contexts.rs  test_convenience.rs  test_edge_cases.rs  test_empty_buffer.rs  test_getitem_roundtrip.rs  test_multi_compressor.rs  test_noinit.rs  test_raw_blosclz.rs  test_shuffle_roundtrip.rs
