[package]
name = "blusc"
version = "0.0.2"
authors = ["Mark"]
edition = "2021"
license = "BSD-3-Clause"
exclude = [
    "c-blosc2/**",
    "reference/**",
]
repository = "https://github.com/keller-mark/blusc"
keywords = ["compression"]
categories = ["compression"]
description = "Pure rust implementation for blosc"

[dependencies]
lz4_flex = "0.12.0"
zstd = "0.13"
flate2 = "^1.1.1"
snap = "^1.1.1"

[dev-dependencies]
# ONLY FOR TESTING THAT THE RUST IMPLEMENTATION MATCHES THE C BINDINGS
# Reference: https://github.com/maiteko/blosc2-src-rs
blosc2-src = { version = "0.1.4", features = ["zstd"] }
bytemuck = { version = "1.14.0", features = ["extern_crate_alloc", "must_cast", "min_const_generics"] }
bytes = "1.7.0"
ctor = "0.2"
