[package]
name = "blusc"
version = "0.0.2"
authors = ["Mark Keller <markkellerweb+git@gmail.com>"]
edition = "2021"
license = "BSD-3-Clause"
exclude = [
    ".github/",
    "c-blosc/**",
    "c-blosc2/**",
]
repository = "https://github.com/keller-mark/blusc"
keywords = ["compression", "blosc"]
categories = ["compression", "wasm"]
description = "Rust implementation of blosc compression, port of c-blosc2"

[lib]
crate-type = ["lib"]

[dependencies]
lz4_flex = "0.12.0"
zstd = "0.13"
flate2 = "^1.1.1"
snap = "^1.1.1"

[dev-dependencies]
# ONLY FOR TESTING THAT THE RUST IMPLEMENTATION MATCHES THE C BINDINGS
# Reference: https://github.com/maiteko/blosc2-src-rs
blosc2-src = { version = "0.1.4", features = ["zstd"] }
bytemuck = { version = "1.14.0", features = ["extern_crate_alloc", "must_cast", "min_const_generics"] }
bytes = "1.7.0"
ctor = "0.2"
